Lemmatization and stop_word filtering for each. returns cleaned tokened list for each tweets as list of lists.

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -796,6 +796,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 1), match='#'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mention = '#'\n",
+    "mention_pattern = r'(@\\w+)|(#)'\n",
+    "x = re.match(mention_pattern, mention)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# 8663801465970268676 #\n",
+      "FollowFriday 4558212729026417302 FollowFriday\n",
+      "@France_Inte 15376876697887500918 @france_inte\n",
+      "@PKuchly57 12282724241219763148 @PKuchly57\n",
+      "@Milipol_Paris 588482831550294546 @milipol_paris\n",
+      "for 16037325823156266367 for\n",
+      "being 10382539506755952630 be\n",
+      "top 8328343100126676325 top\n",
+      "engaged 12307195711836261817 engaged\n",
+      "members 14721843519903598875 member\n",
+      "in 3002984154512732771 in\n",
+      "my 561228191312463089 -PRON-\n",
+      "community 17822516981717808594 community\n",
+      "this 1995909169258310477 this\n",
+      "week 14249255431398666181 week\n",
+      ":) 5920004935509210957 :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load('en')\n",
+    "\n",
+    "doc = nlp('#FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)')\n",
+    "\n",
+    "for token in doc:\n",
+    "    print(token, token.lemma, token.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
