--- a/playground.ipynb
+++ b/playground.ipynb
@@ -854,6 +854,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# 8663801465970268676 #\n",
+      "FollowFriday 4558212729026417302 FollowFriday\n",
+      "@France_Inte 16733713287512299168 @France_Inte\n",
+      "@PKuchly57 12282724241219763148 @PKuchly57\n",
+      "@Milipol_Paris 9110577758730473699 @Milipol_Paris\n",
+      "for 16037325823156266367 for\n",
+      "being 3899131925553995529 being\n",
+      "top 8328343100126676325 top\n",
+      "engaged 12307195711836261817 engaged\n",
+      "members 1000530315840773259 members\n",
+      "in 3002984154512732771 in\n",
+      "my 227504873216781231 my\n",
+      "community 17822516981717808594 community\n",
+      "this 1995909169258310477 this\n",
+      "week 14249255431398666181 week\n",
+      ":) 5920004935509210957 :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.lang.en import English\n",
+    "nlp = English()\n",
+    "tokenizer = nlp.Defaults.create_tokenizer(nlp)\n",
+    "doc = tokenizer('#FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)')\n",
+    "for token in doc:\n",
+    "    print(token, token.lemma, token.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# 8663801465970268676 #\n",
+      "FollowFriday 4558212729026417302 FollowFriday\n",
+      "@France_Inte 16733713287512299168 @France_Inte\n",
+      "@PKuchly57 12282724241219763148 @PKuchly57\n",
+      "@Milipol_Paris 9110577758730473699 @Milipol_Paris\n",
+      "for 16037325823156266367 for\n",
+      "being 3899131925553995529 being\n",
+      "top 8328343100126676325 top\n",
+      "engaged 12307195711836261817 engaged\n",
+      "members 1000530315840773259 members\n",
+      "in 3002984154512732771 in\n",
+      "my 227504873216781231 my\n",
+      "community 17822516981717808594 community\n",
+      "this 1995909169258310477 this\n",
+      "week 14249255431398666181 week\n",
+      ":) 5920004935509210957 :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from spacy.lang.en import English\n",
+    "nlp = English()\n",
+    "\n",
+    "doc = nlp('#FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)')\n",
+    "for token in doc:\n",
+    "    print(token, token.lemma, token.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
