update on inner file

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -929,6 +929,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = '123455566'\n",
+    "nums_pattern = r'^[0-9]+$'\n",
+    "if re.match(nums_pattern, text):\n",
+    "    print('True')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
