implemented text classification model.

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -953,6 +953,118 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'D:\\\\Lab\\\\nltk_data\\\\corpora\\\\movie_reviews'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8e16b1ba34aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# loading all files.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmovie\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmoviedir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     71\u001b[0m                           FutureWarning)\n\u001b[1;32m     72\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/datasets/_base.py\u001b[0m in \u001b[0;36mload_files\u001b[0;34m(container_path, description, categories, load_content, shuffle, encoding, decode_error, random_state)\u001b[0m\n\u001b[1;32m    184\u001b[0m     \u001b[0mfilenames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    185\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 186\u001b[0;31m     folders = [f for f in sorted(listdir(container_path))\n\u001b[0m\u001b[1;32m    187\u001b[0m                if isdir(join(container_path, f))]\n\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'D:\\\\Lab\\\\nltk_data\\\\corpora\\\\movie_reviews'"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "from sklearn.datasets import load_files\n",
+    "moviedir = r'/Users/somayoshida/nltk_data/corpora/movie_reviews'\n",
+    "\n",
+    "# loading all files. \n",
+    "movie = load_files(moviedir, shuffle=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "docs_train, docs_test, y_train, y_test = train_test_split(movie.data, movie.target, \n",
+    "                                                          test_size = 0.20, random_state = 12)\n",
+    "\n",
+    "\n",
+    "# initialize CountVectorizer\n",
+    "movieVzer= CountVectorizer(min_df=2, tokenizer=nltk.word_tokenize, max_features=3000) # use top 3000 words only. 78.25% acc.\n",
+    "# movieVzer = CountVectorizer(min_df=2, tokenizer=nltk.word_tokenize)         # use all 25K words. Higher accuracy\n",
+    "\n",
+    "# fit and tranform using training text \n",
+    "docs_train_counts = movieVzer.fit_transform(docs_train)\n",
+    "\n",
+    "\n",
+    "# Convert raw frequency counts into TF-IDF values\n",
+    "movieTfmer = TfidfTransformer()\n",
+    "docs_train_tfidf = movieTfmer.fit_transform(docs_train_counts)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# testing data\n",
+    "\n",
+    "# Using the fitted vectorizer and transformer, tranform the test data\n",
+    "docs_test_counts = movieVzer.transform(docs_test)\n",
+    "docs_test_tfidf = movieTfmer.transform(docs_test_counts)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Now ready to build a classifier. \n",
+    "# We will use Multinominal Naive Bayes as our model\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "\n",
+    "# Train a Multimoda Naive Bayes classifier. Again, we call it \"fitting\"\n",
+    "clf = MultinomialNB()\n",
+    "clf.fit(docs_train_tfidf, y_train)\n",
+    "\n",
+    "# Predict the Test set results, find accuracy\n",
+    "y_pred = clf.predict(docs_test_tfidf)\n",
+    "sklearn.metrics.accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "# Making the Confusion Matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# trying the classifier\n",
+    "# very short and fake movie reviews\n",
+    "reviews_new = ['This movie was excellent', 'Absolute joy ride', \n",
+    "            'Steven Seagal was terrible', 'Steven Seagal shone through.', \n",
+    "              'This was certainly a movie', 'Two thumbs up', 'I fell asleep halfway through', \n",
+    "              \"We can't wait for the sequel!!\", '!', '?', 'I cannot recommend this highly enough', \n",
+    "              'instant classic.', 'Steven Seagal was amazing. His performance was Oscar-worthy.']\n",
+    "\n",
+    "reviews_new_counts = movieVzer.transform(reviews_new)         # turn text into count vector\n",
+    "reviews_new_tfidf = movieTfmer.transform(reviews_new_counts)  # turn into tfidf vector\n",
+    "\n",
+    "\n",
+    "# have classifier make a prediction\n",
+    "pred = clf.predict(reviews_new_tfidf)\n",
+    "\n",
+    "# print out results\n",
+    "for review, category in zip(reviews_new, pred):\n",
+    "    print('%r => %s' % (review, movie.target_names[category]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
